docs/content/docs/cua/reference/agent-sdk/v0.6/api.mdx
---
title: Agent SDK v0.6 API Reference
description: API reference for Agent SDK version 0.6
---

{/_
AUTO-GENERATED FILE - DO NOT EDIT DIRECTLY
Generated by: npx tsx scripts/docs-generators/generate-versioned-docs.ts
Source tag: agent-v0.6.2
Version: 0.6.2
_/}

import { Callout } from 'fumadocs-ui/components/callout';

<Callout type="warn">
  This is documentation for **v0.6**. [View latest version](/cua/reference/agent-sdk/api).
</Callout>

<div className="flex items-center gap-2 mb-6">
  <span className="px-2 py-1 bg-amber-100 dark:bg-amber-900 text-amber-800 dark:text-amber-200 rounded text-sm font-mono">
    v0.6.2
  </span>
  <span className="text-sm text-fd-muted-foreground">pip install cua-agent==0.6.2</span>
</div>

agent - Decorator-based Computer Use Agent with liteLLM integration

## Classes

| Class           | Description                                                            |
| --------------- | ---------------------------------------------------------------------- |
| `ComputerAgent` | Main agent class that automatically selects the appropriate agent loop |

## ComputerAgent

Main agent class that automatically selects the appropriate agent loop
based on the model and executes tool calls.

### Methods

#### ComputerAgent.run

```python
async def run(self, messages: Messages, stream: bool = False, api_key: Optional[str] = None, api_base: Optional[str] = None, additional_generation_kwargs = {}) -> AsyncGenerator[Dict[str, Any], None]
```

Run the agent with the given messages using Computer protocol handler pattern.

Args:
messages: List of message dictionaries
stream: Whether to stream the response
api_key: Optional API key override for the model provider
api_base: Optional API base URL override for the model provider
\*\*additional_generation_kwargs: Additional arguments passed to the model provider

Returns:
AsyncGenerator that yields response chunks

#### ComputerAgent.predict_click

```python
async def predict_click(self, instruction: str, image_b64: Optional[str] = None) -> Optional[Tuple[int, int]]
```

Predict click coordinates based on image and instruction.

Args:
instruction: Instruction for where to click
image_b64: Base64 encoded image (optional, will take screenshot if not provided)

Returns:
None or tuple with (x, y) coordinates

#### ComputerAgent.get_capabilities

```python
def get_capabilities(self) -> List[AgentCapability]
```

Get list of capabilities supported by the current agent config.

Returns:
List of capability strings (e.g., ["step", "click"])

#### ComputerAgent.open

```python
def open(self, port: Optional[int] = None)
```

Start the playground server and open it in the browser.

This method starts a local HTTP server that exposes the /responses endpoint
and automatically opens the CUA playground interface in the default browser.

Args:
port: Port to run the server on. If None, finds an available port automatically.

Example: >>> agent = ComputerAgent(model="claude-sonnet-4") >>> agent.open() # Starts server and opens browser
